# free-claude-code

./: .env.example  .gitignore  README.md  app_entry.py  build.bat  pyproject.toml  render.yaml
api/: app.py  dependencies.py  request_utils.py
config/: logging_config.py  settings.py
messaging/: handler.py
messaging/rendering/: __init__.py
providers/: __init__.py  openai_compat.py
providers/common/: context_window.py
tests/: conftest.py
tests/api/: test_app_lifespan_and_errors.py  test_dependencies.py  test_models_validators.py
tests/config/: test_config.py
